# SimUci-Streamlit

./: .gitignore  README.md  SimUciCausal.md  app.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/skills/data-analysis/: SKILL.md
.github/skills/documentation/: SKILL.md
.github/skills/python-best-practices/: SKILL.md
.github/skills/streamlit-development/: SKILL.md
.streamlit/: config.toml  secrets.toml.example
docs/: references.bib
docs/documentation/: APP_INFO_EN.md  APP_INFO_ES.md  CHANGELOG.md  CHANGELOG_ES.md  INDEX.md  SIMULATION.md  STATISTICS.md  THEME_IMPLEMENTATION.md  UI_GUIDE.md
docs/documentation/en/: APP_INFO_EN.md
docs/documentation/es/: APP_INFO_ES.md  CHANGELOG_ES.md
notebooks/: data_analisis_study.ipynb
uci/: distribuciones.py  experiment.py  procesar_datos.py  simulacion.py  stats.py
utils/: data_loader.py  validation_ui.py
utils/constants/: __init__.py  experiment.py  limits.py  mappings.py  messages.py  paths.py  theme.py
utils/helpers/: __init__.py  helpers.py
utils/services/: __init__.py  google_drive.py
utils/validation_ui/: __init__.py  validation_ui.py
utils/visuals/: __init__.py
