[project]
name = "simuci-streamlit"
version = "1.0.1"
description = "SimUCI: Simulación de Pacientes en Cuidados Intensivos"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scikit-learn==1.6.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "simpy>=4.1.1",
    "simuci",
    "streamlit>=1.53.1",
    "google-auth",
    "google-api-python-client",
    "imbalanced-learn>=0.12.0",
]
